crates/plotnik-lib/tests/02-parser/recovery_validation/ref_with_supertype_slash.txt
(RefName/subtype)
------------------ DIAGNOSTICS -------------------
error: references cannot have supertypes
 --> query.ptk:1:9
  |
1 | (RefName/subtype)
  |         ^
  |
help: supertypes refine node kinds, not references: write `(supertype#subtype)` or just `(RefName)`
